--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -1,7 +1,13 @@
 {% extends "@FOSUser/layout.html.twig" %}
 
 {% set active = 0 %}
-	
+
+{% block nav %}
+
+  {{ parent() }}
+  
+{% endblock %}	
+
 {% block fos_user_content %}
     {{ include('@FOSUser/Security/login_content.html.twig') }}
 {% endblock fos_user_content %}
