--- a/src/CRW/PlatformBundle/Resources/views/annonce/edit.html.twig
+++ b/src/CRW/PlatformBundle/Resources/views/annonce/edit.html.twig
@@ -3,6 +3,13 @@
 {% set active = 0 %}
 
 {% block body %}
+
+    {% block nav %}
+
+      {{ parent() }}
+      
+    {% endblock %}
+    
     <h1>Annonce edit</h1>
 
     {{ form_start(edit_form) }}
