--- a/src/CRW/PlatformBundle/Resources/views/annonce/show.html.twig
+++ b/src/CRW/PlatformBundle/Resources/views/annonce/show.html.twig
@@ -3,6 +3,13 @@
 {% set active = 0 %}
 
 {% block body %}
+
+    {% block nav %}
+
+      {{ parent() }}
+      
+    {% endblock %}
+    
     <h1>Annonce</h1>
 
     <div id="blog" class="section container blog-classic">
@@ -42,7 +49,6 @@
                     </div>
 
                 </div><!-- / .blog-post-single -->
-
 
 
                 <!-- ========== Comments ========== -->
@@ -248,26 +254,6 @@
 
         </div><!-- / .row -->
     </div><!-- / .container -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
     <ul>
         <li>
