--- a/src/CRW/PlatformBundle/Resources/views/Default/index.html.twig
+++ b/src/CRW/PlatformBundle/Resources/views/Default/index.html.twig
@@ -159,23 +159,20 @@
                   <!-- Image/Slider -->
                   <div class="product-image-wrapper">
                     <span class="label label-red sale-label">A VENDRE</span>
-
-                    <!-- Product Actions (hover) -->
-                    <a href="#" class="fav-btn"><span class="linea-basic-star"></span></a>
                     
                     <!-- Product Main Image -->
                     <div class="shop-p-slider">
-                      <a href="../../pages/shop/shop-single.html"><img src="http://placehold.it/263x350" alt="Product Image 1"></a>
-                      <a href="../../pages/shop/shop-single.html"><img src="http://placehold.it/263x350" alt="Product Image 2"></a>
-                      <a href="../../pages/shop/shop-single.html"><img src="http://placehold.it/263x350" alt="Product Image 3"></a>
+                      <a href="#"><img src="{{ asset('img/annonces/Annonce1(1).jpg') }}" alt="Product Image 1"></a>
+                      <a href="#"><img src="{{ asset('img/annonces/Annonce1(2).jpg') }}" alt="Product Image 1"></a>
+                      <a href="#"><img src="{{ asset('img/annonces/Annonce1(3).jpg') }}" alt="Product Image 1"></a>
                     </div>
                   </div>
 
                   <!-- Product Meta -->
                   <div class="product-meta">
-                    <a href="../../pages/shop/shop-single.html"><h4 class="product-name">Casual Gray Blazer</h4></a>
+                    <a href="#"><h4 class="product-name">Titre de l'annonce</h4></a>
                     <span class="product-sep"></span>
-                    <p class="product-price">$187.99</p>
+                    <p class="product-price">$TAPALESMOYENS</p>
                   </div>
 
                 </div><!-- / .shop-product-card -->
@@ -189,9 +186,6 @@
                   <!-- Image/Slider -->
                   <div class="product-image-wrapper">
                     <span class="label label-red sale-label">A VENDRE</span>
-
-                    <!-- Product Actions (hover) -->
-                    <a href="#" class="fav-btn"><span class="linea-basic-star"></span></a>
                     
                     <!-- Product Main Image -->
                     <div class="shop-p-slider">
@@ -217,9 +211,7 @@
 
                   <!-- Image/Slider -->
                   <div class="product-image-wrapper">
-                  <span class="label label-green location-label">A LOUER</span>
-                    <!-- Product Actions (hover) -->
-                    <a href="#" class="fav-btn"><span class="linea-basic-star"></span></a>
+                  <span class="label label-red sale-label">A VENDRE</span>
                     
                     <!-- Product Main Image -->
                     <div class="shop-p-slider">
@@ -246,8 +238,6 @@
                   <!-- Image/Slider -->
                   <div class="product-image-wrapper">
                   <span class="label label-red sale-label">A VENDRE</span>
-                    <!-- Product Actions (hover) -->
-                    <a href="#" class="fav-btn"><span class="linea-basic-star"></span></a>
                     
                     <!-- Product Main Image -->
                     <div class="shop-p-slider">
@@ -294,13 +284,13 @@
 
                   <!-- Image -->
                   <div class="t-image">
-                    <img src="http://placehold.it/360x440" alt="Team Member" class="img-responsive">
-                    <div class="t-description">
-                      <div class="content-wrapper">
-                        <h4 class="h-alt">Hello!</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
-                      </div>
-                    </div>
+                    <img src="{{ asset('img/picto-girl.png') }}" alt="Team Member" class="img-responsive">
+                    {#<div class="t-description">#}
+                      {#<div class="content-wrapper">#}
+                        {#<h4 class="h-alt">Bonjour !</h4>#}
+                        {#<p>Je suis la chef de projet du site e-mobilier.</p>#}
+                      {#</div>#}
+                    {#</div>#}
                   </div>
 
                   <!-- Info -->
@@ -319,13 +309,13 @@
 
                   <!-- Image -->
                   <div class="t-image">
-                    <img src="http://placehold.it/360x440" alt="Team Member" class="img-responsive">
-                    <div class="t-description">
-                      <div class="content-wrapper">
-                        <h4 class="h-alt">Qui suis-je ?</h4>
-                        <p>J'ai rejoins cette entreprise avec l'aspiration de pouvoir développer un projet de grande envergure. De ce point de vue, E-mobilier correspond parfaitement à mes critères.</p>
-                      </div>
-                    </div>
+                    <img src="{{ asset('img/picto-men.png') }}" alt="Team Member" class="img-responsive">
+                    {#<div class="t-description">#}
+                      {#<div class="content-wrapper">#}
+                        {#<h4 class="h-alt">Qui suis-je ?</h4>#}
+                        {#<p>J'ai rejoins cette entreprise avec l'aspiration de pouvoir développer un projet de grande envergure. De ce point de vue, E-mobilier correspond parfaitement à mes critères.</p>#}
+                      {#</div>#}
+                    {#</div>#}
                   </div>
 
                   <!-- Info -->
@@ -344,13 +334,13 @@
 
                   <!-- Image -->
                   <div class="t-image">
-                    <img src="http://placehold.it/360x440" alt="Team Member" class="img-responsive">
-                    <div class="t-description">
-                      <div class="content-wrapper">
-                        <h4 class="h-alt">Hello!</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
-                      </div>
-                    </div>
+                    <img src="{{ asset('img/picto-men.png') }}" alt="Team Member" class="img-responsive">
+                    {#<div class="t-description">#}
+                      {#<div class="content-wrapper">#}
+                        {#<h4 class="h-alt">Hello!</h4>#}
+                        {#<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>#}
+                      {#</div>#}
+                    {#</div>#}
                   </div>
 
                   <!-- Info -->
@@ -369,13 +359,13 @@
 
                   <!-- Image -->
                   <div class="t-image">
-                    <img src="http://placehold.it/360x440" alt="Team Member" class="img-responsive">
-                    <div class="t-description">
-                      <div class="content-wrapper">
-                        <h4 class="h-alt">Hello!</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
-                      </div>
-                    </div>
+                    <img src="{{ asset('img/picto-men.png') }}" alt="Team Member" class="img-responsive">
+                    {#<div class="t-description">#}
+                      {#<div class="content-wrapper">#}
+                        {#<h4 class="h-alt">Hello!</h4>#}
+                        {#<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>#}
+                      {#</div>#}
+                    {#</div>#}
                   </div>
 
                   <!-- Info -->
