--- a/web/css/scss/_team.scss
+++ b/web/css/scss/_team.scss
@@ -36,6 +36,8 @@
 			position: relative;
 			height: 375px;
 			overflow: hidden;
+			padding:50px;
+			background-color: #cccccc;
 
 			.t-description {
 				display: block;
