--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -41,14 +41,8 @@
         {% block nav %}
             <!-- ========== Navigation ========== -->
 
-            <nav class="navbar navbar-default navbar-fixed-top navbar-inverse navbar-trans {% if active == 1 %}is-home{% endif %} navbar-fw" role="navigation">
+            <nav class="navbar navbar-default navbar-fixed-top navbar-inverse {% if active == 1 %} is-home {% endif %} navbar-fw" role="navigation">
                 <div class="navbar-header page-scroll">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
                     <!-- Logo -->
                     <a class="navbar-brand" href="{{ path('crw_platform_homepage') }}"><img src="{{ asset('img/logo.svg') }}"></a>
                 </div>
@@ -58,7 +52,6 @@
                     <ul class="nav navbar-nav">
                         <li><a href="{{ path('crw_platform_homepage') }}">Accueil<span class="sr-only"></span></a></li>
                         <li><a href="{{ path('crw_platform_annonce') }}">Annonces<span class="sr-only"></span></a></li>
-                        <li><a href="{{ path('crw_platform_about') }}">A Propos<span class="sr-only"></span></a></li>
                         <li><a href="{{ path('crw_platform_faq') }}">FAQ<span class="sr-only"></span></a></li>
                         <li><a href="{{ path('crw_platform_contact_index') }}">Contact<span class="sr-only"></span></a></li>
                         <li><a href="{{ path('crw_platform_contact_index') }}">Connexion<span class="sr-only"></span></a></li>
@@ -74,6 +67,7 @@
 
         {# inclus le footer #}
         {% block footer %}
+
             {{ include("CRWPlatformBundle:Cookies:banner.html.twig") }}
 
     <!-- ========== Footer Widgets ========== -->
@@ -88,7 +82,6 @@
                   <h5 class="header-widget">Navigation</h5>
                     <a href="{{ path('crw_platform_homepage') }}">Accueil</a><br>
                     <a href="{{ path('crw_platform_annonce') }}">Annonces</a><br>
-                    <a href="{{ path('crw_platform_about') }}">A Propos</a><br>
                     <a href="{{ path('crw_platform_faq') }}">FAQ</a><br>
                     <a href="{{ path('crw_platform_contact_index') }}">Contact</a><br>
                     <a href="{{ path('crw_platform_contact_index') }}">Connexion</a>
