--- a/src/CRW/PlatformBundle/Resources/views/Default/index.html.twig
+++ b/src/CRW/PlatformBundle/Resources/views/Default/index.html.twig
@@ -3,16 +3,12 @@
 {% set active = 1 %}
 
 {% block nav %}
+
   {{ parent() }}
 
 {% endblock %}
 
 {% block body %}
-
-    <!--[if lt IE 8]>
-    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-    <![endif]-->
-
 
     <!-- ========== Preloader ========== -->
 
@@ -397,7 +393,7 @@
           <!-- Map -->
           <div id="map-canvas" class="gmap map-wide"></div>
 
-          <div class="footer-litle ws-m">
+          <div id="sauce" class="footer-litle ws-m">
             <div class="gray-bg">
 
               <!-- Contact Info -->
