--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -41,7 +41,7 @@
         {% block nav %}
             <!-- ========== Navigation ========== -->
 
-            <nav class="navbar navbar-default navbar-fixed-top navbar-inverse {% if active == 1 %} is-home {% endif %} navbar-fw" role="navigation">
+            <nav class="navbar navbar-default navbar-fixed-top navbar-inverse navbar-fw" role="navigation">
                 <div class="navbar-header page-scroll">
                     <!-- Logo -->
                     <a class="navbar-brand" href="{{ path('crw_platform_homepage') }}"><img src="{{ asset('img/logo.svg') }}"></a>
