--- a/src/CRW/PlatformBundle/Resources/views/Default/index.html.twig
+++ b/src/CRW/PlatformBundle/Resources/views/Default/index.html.twig
@@ -1,10 +1,24 @@
 {% extends 'base.html.twig' %}
 
-{% set active = 1 %}
-
 {% block nav %}
 
-  {{ parent() }}
+  <nav class="navbar navbar-default navbar-fixed-top navbar-inverse is-home navbar-fw" role="navigation">
+    <div class="navbar-header page-scroll">
+        <!-- Logo -->
+        <a class="navbar-brand" href="{{ path('crw_platform_homepage') }}"><img src="{{ asset('img/logo.svg') }}"></a>
+    </div>
+
+    <!-- Navbar Links -->
+    <div id="navbar" class="navbar-collapse collapse page-scroll navbar-right">
+        <ul class="nav navbar-nav">
+            <li><a href="{{ path('crw_platform_homepage') }}">Accueil<span class="sr-only"></span></a></li>
+            <li><a href="{{ path('crw_platform_annonce') }}">Annonces<span class="sr-only"></span></a></li>
+            <li><a href="{{ path('crw_platform_faq') }}">FAQ<span class="sr-only"></span></a></li>
+            <li><a href="{{ path('crw_platform_contact_index') }}">Contact<span class="sr-only"></span></a></li>
+            <li><a href="{{ path('crw_platform_contact_index') }}">Connexion<span class="sr-only"></span></a></li>
+        </ul><!-- / .nav .navbar-nav -->
+    </div><!--/.navbar-collapse -->
+</nav><!-- / .navbar -->
 
 {% endblock %}
 
