Push avec un parse error

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -54,7 +54,7 @@
                         <li><a href="{{ path('crw_platform_annonce') }}">Annonces<span class="sr-only"></span></a></li>
                         <li><a href="{{ path('crw_platform_faq') }}">FAQ<span class="sr-only"></span></a></li>
                         <li><a href="{{ path('crw_platform_contact_index') }}">Contact<span class="sr-only"></span></a></li>
-                        <li><a href="{{ path('crw_platform_contact_index') }}">Connexion<span class="sr-only"></span></a></li>
+                        <li><a href="{{ path('crw_platform_login') }}">Connexion<span class="sr-only"></span></a></li>
                     </ul><!-- / .nav .navbar-nav -->
                 </div><!--/.navbar-collapse -->
             </nav><!-- / .navbar -->
@@ -84,7 +84,7 @@
                     <a href="{{ path('crw_platform_annonce') }}">Annonces</a><br>
                     <a href="{{ path('crw_platform_faq') }}">FAQ</a><br>
                     <a href="{{ path('crw_platform_contact_index') }}">Contact</a><br>
-                    <a href="{{ path('crw_platform_contact_index') }}">Connexion</a>
+                    <a href="{{ path('crw_platform_login') }}">Connexion</a>
                 </div><!-- / .widget -->
               </div><!-- / .col-md-3 -->
 
@@ -129,10 +129,11 @@
               <!-- Mentions Légales -->
               <div class="col-md-3 col-sm-6">
                 <div class="widget about-widget">
-                  <h5 class="header-widget">Mentions légales & CGV</h5>
+                  <h5 class="header-widget">Mentions légales CGV et CGU</h5>
                   
                     <a href="{{ path('crw_platform_legal') }}">Mentions Légales</a><br>
                     <a href="{{ path('crw_platform_cgv') }}">Conditions Générales de Vente</a><br>
+                    <a href="{{ path('crw_platform_cgu') }}">Conditions Générales d'Utilisation du Site'</a>
 
                 </div><!-- / .widget -->
               </div><!-- / .col-md-3 -->
