--- a/src/CRW/PlatformBundle/Resources/views/annonce/index.html.twig
+++ b/src/CRW/PlatformBundle/Resources/views/annonce/index.html.twig
@@ -19,7 +19,7 @@
                         <div class="blog-post">
 
                             <!-- Image -->
-                            <a href="#" class="post-img"><img src="http://placehold.it/990x715" alt="Blog Post 1"></a>
+                            <a href="#" class="post-img"><img style="width : 990px;" src="{{ asset(annonce.filename) }}" alt="Blog Post 1"></a>
 
                             <div class="bp-content">
 
