--- a/src/CRW/PlatformBundle/Resources/views/Default/index.html.twig
+++ b/src/CRW/PlatformBundle/Resources/views/Default/index.html.twig
@@ -12,10 +12,11 @@
     <div id="navbar" class="navbar-collapse collapse page-scroll navbar-right">
         <ul class="nav navbar-nav">
             <li><a href="{{ path('crw_platform_homepage') }}">Accueil<span class="sr-only"></span></a></li>
+            <li><a href="{{ path('listedesbiens') }}">Trouver un bien<span class="sr-only"></span></a></li>
             <li><a href="{{ path('crw_platform_annonce') }}">Annonces<span class="sr-only"></span></a></li>
             <li><a href="{{ path('crw_platform_faq') }}">FAQ<span class="sr-only"></span></a></li>
             <li><a href="{{ path('crw_platform_contact_index') }}">Contact<span class="sr-only"></span></a></li>
-            <li><a href="{{ path('crw_platform_contact_index') }}">Connexion<span class="sr-only"></span></a></li>
+            <li><a href="{{ path('crw_platform_annonce') }}">Connexion<span class="sr-only"></span></a></li>
         </ul><!-- / .nav .navbar-nav -->
     </div><!--/.navbar-collapse -->
 </nav><!-- / .navbar -->
@@ -169,7 +170,7 @@
                   <!-- Image/Slider -->
                   <div class="product-image-wrapper">
                     <span class="label label-red sale-label">A VENDRE</span>
-                    
+
                     <!-- Product Main Image -->
                     <div class="shop-p-slider">
                       <a href="#"><img src="{{ asset('img/annonces/Annonce1(1).jpg') }}" alt="Product Image 1"></a>
@@ -196,7 +197,7 @@
                   <!-- Image/Slider -->
                   <div class="product-image-wrapper">
                     <span class="label label-red sale-label">A VENDRE</span>
-                    
+
                     <!-- Product Main Image -->
                     <div class="shop-p-slider">
                       <a href="pages/shop/shop-single.html"><img src="http://placehold.it/263x350" alt="Product Image 6"></a>
@@ -222,7 +223,7 @@
                   <!-- Image/Slider -->
                   <div class="product-image-wrapper">
                   <span class="label label-red sale-label">A VENDRE</span>
-                    
+
                     <!-- Product Main Image -->
                     <div class="shop-p-slider">
                       <a href="pages/shop/shop-single.html"><img src="http://placehold.it/263x350" alt="Product Image 7"></a>
@@ -248,7 +249,7 @@
                   <!-- Image/Slider -->
                   <div class="product-image-wrapper">
                   <span class="label label-red sale-label">A VENDRE</span>
-                    
+
                     <!-- Product Main Image -->
                     <div class="shop-p-slider">
                       <a href="pages/shop/shop-single.html"><img src="http://placehold.it/263x350" alt="Product Image 8"></a>
@@ -269,7 +270,7 @@
 
             <div class="row ws-m">
               <div class="col-md-12 text-center">
-                <a href="/annonce" class="btn" >Voir toutes les annonces</a>
+                <a href="{{ path('listedesbiens') }}" class="btn" >Voir toutes les annonces</a>
               </div>
             </div>
           </section><!-- / .container -->
@@ -282,7 +283,7 @@
         <div class="gray-bg">
           <section class="container section team-4col">
             <div class="row">
-              
+
               <header class="sec-heading">
                 <h2>Notre équipe</h2>
                 <span class="subheading">Nous sommes des professionnels de la création</span>
@@ -440,7 +441,7 @@
                     </div>
                   </li>
                 </ul>
-              </address>            
+              </address>
             </div><!-- / .gray-bg -->
           </div>
         </section><!-- / .contact-1 -->
