update_sifa_annonces

--- a/src/CRW/PlatformBundle/Resources/views/annonce/show.html.twig
+++ b/src/CRW/PlatformBundle/Resources/views/annonce/show.html.twig
@@ -18,8 +18,8 @@
                 <div class="col-md-12 blog-post-single wow fadeIn" data-wow-delay=".1s" data-wow-duration="2s">
 
                     <!-- Image -->
-                    <center><img class="img-responsive post-img" style="width:400px" src="{{ asset(annonce.filename) }}" alt="Blog Post 1">
-                    </center>
+                    <center><img class="img-responsive post-img" style="width:400px" src="/e-mobilier/web/uploads/{{ annonce.mediaName }}" alt="Blog Post 1">
+                        </center>
                     <!-- Meta data -->
                     <div class="post-meta">
                         <a href="#" class="post-date">
