--- a/src/CRW/PlatformBundle/Resources/views/Biens/listedesbiens.html.twig
+++ b/src/CRW/PlatformBundle/Resources/views/Biens/listedesbiens.html.twig
@@ -239,7 +239,7 @@
 
                                     <!-- Product Main Image -->
                                     <div class="shop-p-slider">
-                                        <a href="{{ path('annonce_show', { 'id': annonce.id }) }}"><img src="{{ asset(annonce.filename) }}" alt="Product Image 1"></a>
+                                        <a href="{{ path('annonce_show', { 'id': annonce.id }) }}"><img src="/e-mobilier/web/uploads/{{ annonce.mediaName }}" alt="Product Image 1"></a>
                                         <a href="../../pages/shop/shop-single.html"><img src="http://placehold.it/263x350" alt="Product Image 6"></a>
                                         <a href="../../pages/shop/shop-single.html"><img src="http://placehold.it/263x350" alt="Product Image 8"></a>
                                     </div>
