--- a/src/CRW/PlatformBundle/Resources/views/annonce/new.html.twig
+++ b/src/CRW/PlatformBundle/Resources/views/annonce/new.html.twig
@@ -77,9 +77,9 @@
                 </div>
 
                 <div class="form-group">
-                    {{ form_label(form.image) }}
-                    {{ form_widget(form.image, { 'attr': {'class': 'form-control'} }) }}
+                    {{ form_widget(form.mediaFile) }}
                 </div>
+
                 <br><br><br><br>
                 {{ form_widget(form.envoyer, { 'attr': {'class': 'btn'} }) }}
             </div><!-- / .col-md-4 -->
