--- a/src/CRW/PlatformBundle/Resources/views/Biens/listedesbiens.html.twig
+++ b/src/CRW/PlatformBundle/Resources/views/Biens/listedesbiens.html.twig
@@ -231,17 +231,11 @@
 
                                 <!-- Image/Slider -->
                                 <div class="product-image-wrapper">
-                                    <span class="label label-red sale-label">SALE</span>
-
-                                    <!-- Product Actions (hover) -->
-                                    <a href="#" class="buy-btn"><span class="linea-ecommerce-bag"></span></a>
-                                    <a href="#" class="fav-btn"><span class="linea-basic-star"></span></a>
+                                    <span class="label label-red sale-label">A VENDRE</span>
 
                                     <!-- Product Main Image -->
                                     <div class="shop-p-slider">
-                                        <a href="{{ path('annonce_show', { 'id': annonce.id }) }}"><img src="/e-mobilier/web/uploads/{{ annonce.mediaName }}" alt="Product Image 1"></a>
-                                        <a href="../../pages/shop/shop-single.html"><img src="http://placehold.it/263x350" alt="Product Image 6"></a>
-                                        <a href="../../pages/shop/shop-single.html"><img src="http://placehold.it/263x350" alt="Product Image 8"></a>
+                                        <a href="{{ path('annonce_show', { 'id': annonce.id }) }}"><img src="/web/uploads/{{ annonce.mediaName }}" alt="Product Image 1"></a>
                                     </div>
                                 </div>
 
