--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -51,11 +51,19 @@
                 <div id="navbar" class="navbar-collapse collapse page-scroll navbar-right">
                     <ul class="nav navbar-nav">
                         <li><a href="{{ path('crw_platform_homepage') }}">Accueil<span class="sr-only"></span></a></li>
-                        <li><a href="{{ path('listedesbiens') }}">Trouver un biens<span class="sr-only"></span></a></li>
+                        <li><a href="{{ path('listedesbiens') }}">Trouver un bien<span class="sr-only"></span></a></li>
                         <li><a href="{{ path('crw_platform_annonce') }}">Mes Annonces<span class="sr-only"></span></a></li>
                         <li><a href="{{ path('crw_platform_faq') }}">FAQ<span class="sr-only"></span></a></li>
                         <li><a href="{{ path('crw_platform_contact_index') }}">Contact<span class="sr-only"></span></a></li>
-                        <li><a href="{{ path('crw_platform_annonce') }}">Connexion<span class="sr-only"></span></a></li>
+                        {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+                            <li>
+                                <a href="{{ path('fos_user_security_logout') }}">
+                                    {{ 'layout.logout'|trans({}, 'FOSUserBundle') }}
+                                </a>
+                            </li>
+                        {% else %}
+                            <li><a href="{{ path('crw_platform_annonce') }}">Connexion<span class="sr-only"></span></a></li>
+                        {% endif %}
                     </ul><!-- / .nav .navbar-nav -->
                 </div><!--/.navbar-collapse -->
             </nav><!-- / .navbar -->
@@ -82,7 +90,7 @@
                 <div class="widget about-widget">
                   <h5 class="header-widget">Navigation</h5>
                     <a href="{{ path('crw_platform_homepage') }}">Accueil</a><br>
-                    <a href="{{ path('listedesbiens') }}">Trouver un biens<span class="sr-only"></span></a><br>
+                    <a href="{{ path('listedesbiens') }}">Trouver un bien<span class="sr-only"></span></a><br>
                     <a href="{{ path('crw_platform_annonce') }}">Annonces</a><br>
                     <a href="{{ path('crw_platform_faq') }}">FAQ</a><br>
                     <a href="{{ path('crw_platform_contact_index') }}">Contact</a><br>
