--- a/src/CRW/PlatformBundle/Resources/views/Default/index.html.twig
+++ b/src/CRW/PlatformBundle/Resources/views/Default/index.html.twig
@@ -3,23 +3,31 @@
 {% block nav %}
 
   <nav class="navbar navbar-default navbar-fixed-top navbar-inverse is-home navbar-fw" role="navigation">
-    <div class="navbar-header page-scroll">
-        <!-- Logo -->
-        <a class="navbar-brand" href="{{ path('crw_platform_homepage') }}"><img src="{{ asset('img/logo.svg') }}"></a>
-    </div>
+        <div class="navbar-header page-scroll">
+            <!-- Logo -->
+            <a class="navbar-brand" href="{{ path('crw_platform_homepage') }}"><img src="{{ asset('img/logo.svg') }}"></a>
+        </div>
 
-    <!-- Navbar Links -->
-    <div id="navbar" class="navbar-collapse collapse page-scroll navbar-right">
-        <ul class="nav navbar-nav">
-            <li><a href="{{ path('crw_platform_homepage') }}">Accueil<span class="sr-only"></span></a></li>
-            <li><a href="{{ path('listedesbiens') }}">Trouver un bien<span class="sr-only"></span></a></li>
-            <li><a href="{{ path('crw_platform_annonce') }}">Annonces<span class="sr-only"></span></a></li>
-            <li><a href="{{ path('crw_platform_faq') }}">FAQ<span class="sr-only"></span></a></li>
-            <li><a href="{{ path('crw_platform_contact_index') }}">Contact<span class="sr-only"></span></a></li>
-            <li><a href="{{ path('crw_platform_annonce') }}">Connexion<span class="sr-only"></span></a></li>
-        </ul><!-- / .nav .navbar-nav -->
-    </div><!--/.navbar-collapse -->
-</nav><!-- / .navbar -->
+        <!-- Navbar Links -->
+        <div id="navbar" class="navbar-collapse collapse page-scroll navbar-right">
+            <ul class="nav navbar-nav">
+                <li><a href="{{ path('crw_platform_homepage') }}">Accueil<span class="sr-only"></span></a></li>
+                <li><a href="{{ path('listedesbiens') }}">Trouver un bien<span class="sr-only"></span></a></li>
+                <li><a href="{{ path('crw_platform_annonce') }}">Annonces<span class="sr-only"></span></a></li>
+                <li><a href="{{ path('crw_platform_faq') }}">FAQ<span class="sr-only"></span></a></li>
+                <li><a href="{{ path('crw_platform_contact_index') }}">Contact<span class="sr-only"></span></a></li>
+                {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+                    <li>
+                        <a href="{{ path('fos_user_security_logout') }}">
+                            {{ 'layout.logout'|trans({}, 'FOSUserBundle') }}
+                        </a>
+                    </li>
+                {% else %}
+                    <li><a href="{{ path('crw_platform_annonce') }}">Connexion<span class="sr-only"></span></a></li>
+                {% endif %}
+            </ul><!-- / .nav .navbar-nav -->
+        </div><!--/.navbar-collapse -->
+    </nav><!-- / .navbar -->
 
 {% endblock %}
 
@@ -173,9 +181,8 @@
 
                     <!-- Product Main Image -->
                     <div class="shop-p-slider">
-                      <a href="#"><img src="{{ asset('img/annonces/Annonce1(1).jpg') }}" alt="Product Image 1"></a>
-                      <a href="#"><img src="{{ asset('img/annonces/Annonce1(2).jpg') }}" alt="Product Image 1"></a>
-                      <a href="#"><img src="{{ asset('img/annonces/Annonce1(3).jpg') }}" alt="Product Image 1"></a>
+                      <a href="#"><img src="http://placehold.it/263x350" alt="Product Image 1"></a>
+                      <a href="#"><img src="http://placehold.it/263x350" alt="Product Image 1"></a>
                     </div>
                   </div>
 
