--- a/src/CRW/PlatformBundle/Resources/views/annonce/edit.html.twig
+++ b/src/CRW/PlatformBundle/Resources/views/annonce/edit.html.twig
@@ -7,22 +7,35 @@
       {{ parent() }}
       
     {% endblock %}
-    
-    <h1>Annonce edit</h1>
+    <header class="page-title pt-large pt-dark pt-plax-lg-dark">
+        <div class="container">
 
-    {{ form_start(edit_form) }}
-        {{ form_widget(edit_form) }}
-        <input type="submit" value="Edit" />
-    {{ form_end(edit_form) }}
+        </div>
 
-    <ul>
-        <li>
-            <a href="{{ path('annonce_index') }}">Back to the list</a>
-        </li>
-        <li>
-            {{ form_start(delete_form) }}
-                <input type="submit" value="Delete">
-            {{ form_end(delete_form) }}
-        </li>
-    </ul>
+    </header>
+
+    <section>
+        <div class="row ws-m" style="margin-top:100px;">
+
+            <div class="col-md-offset-3 col-md-6" style="text-align:center;">
+
+                <h1>Annonce edit</h1>
+
+                {{ form_start(edit_form) }}
+                {{ form_widget(edit_form) }}
+                {{ form_end(edit_form) }}
+
+                <ul style="list-style: none; padding-left:0;">
+                    <li>
+                        <a href="{{ path('annonce_index') }}" class="btn">Retour à la liste</a>
+                    </li>
+                    {#<li>#}
+                        {#{{ form_start(delete_form) }}#}
+                        {#<input type="submit" value="Delete">#}
+                        {#{{ form_end(delete_form) }}#}
+                    {#</li>#}
+                </ul>
+            </div>
+        </div>
+    </section>
 {% endblock %}
