--- a/src/CRW/PlatformBundle/Resources/views/annonce/index.html.twig
+++ b/src/CRW/PlatformBundle/Resources/views/annonce/index.html.twig
@@ -8,6 +8,13 @@
       
     {% endblock %}
 
+    <header class="page-title pt-large pt-dark pt-plax-lg-dark">
+        <div class="container">
+
+        </div>
+
+    </header>
+
     <section id="blog" class="section container blog-columns blog-preview">
         <a href="{{ path('annonce_new') }}" class="btn btn-small">Ajouter une annonce</a><br><br>
         <div class="row">
@@ -19,21 +26,9 @@
                         <div class="blog-post">
 
                             <!-- Image -->
-                            <a href="#" class="post-img"><img style="width : 990px;" src="{{ asset(annonce.filename) }}" alt="Blog Post 1"></a>
+                            <a href="#" class="post-img"><img style="width : 990px;" src="/web/uploads/{{ annonce.mediaName }}" alt="Blog Post 1"></a>
 
                             <div class="bp-content">
-
-                                <!-- Meta data -->
-                                <div class="post-meta">
-                                    <a href="#" class="post-date">
-                                        <i class="fa fa-calendar-o"></i>
-                                        <span>{% if annonce.dateCreation %}{{ annonce.dateCreation|date('Y-m-d') }}{% endif %}</span>
-                                    </a>
-                                    <a href="#" class="post-comments">
-                                        <i class="fa fa-comments-o"></i>
-                                        <span>12</span>
-                                    </a>
-                                </div><!-- / .meta -->
 
                                 <!-- Post Title -->
                                 <a href="blog-post.html" class="post-title"><h4>{{ annonce.titre }}</h4></a>
