--- a/src/CRW/PlatformBundle/Resources/views/annonce/new.html.twig
+++ b/src/CRW/PlatformBundle/Resources/views/annonce/new.html.twig
@@ -22,7 +22,6 @@
 <section class="test">
 
     {{ form_start(form) }}<br><br>
-    <a href="{{ path('annonce_index') }}"class="btn">Retour à mes annonces</a>
 
     <div class="row ws-m ">
 
@@ -90,6 +89,8 @@
 
                 <br><br><br><br>
                 {{ form_widget(form.envoyer, { 'attr': {'class': 'btn'} }) }}
+
+                <a href="{{ path('annonce_index') }}"class="btn" style="margin-left: 140px;">Retour à mes annonces</a>
             </div><!-- / .col-md-4 -->
 
         </div><!-- / .row -->
