--- a/app/Resources/FOSUserBundle/views/layout.html.twig
+++ b/app/Resources/FOSUserBundle/views/layout.html.twig
@@ -15,6 +15,7 @@
                 <li><a href="{{ path('listedesbiens') }}">Trouver un bien<span class="sr-only"></span></a></li>
                 <li><a href="{{ path('crw_platform_annonce') }}">Annonces<span class="sr-only"></span></a></li>
                 <li><a href="{{ path('crw_platform_faq') }}">FAQ<span class="sr-only"></span></a></li>
+                <li><a href="https://benedictbianchini.wixsite.com/emobilier" target="_blank">Blog<span class="sr-only"></span></a></li>
                 <li><a href="{{ path('crw_platform_contact_index') }}">Contact<span class="sr-only"></span></a></li>
                 {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
                 <li>
